--- a/AngularSpring/src/main/resources/application.properties
+++ b/AngularSpring/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri=mongodb+srv://Arsalan:dbadmin@cluster0-wcgz3.mongodb.net/test?retryWrites=true&w=majority
+spring.data.mongodb.database=user
